--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -16,13 +16,8 @@
 		copy of the GNU General Public License along with this program; If
 		not, see <http://www.gnu.org/licenses/>.
 	-->
-<resources>
-	<string name="app_name">TravelLog</string>
-	<string name="start_work">start work</string>
-	<string name="stop_work">stop work</string>
-	<string name="start_travel">start travel</string>
-	<string name="stop_travel">stop travel</string>
-	<string name="start_pause">start pause</string>
-	<string name="stop_pause">stop pause</string>
-    <string name="add_row">add row</string>
-</resources>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@android:id/text1" android:layout_width="fill_parent"
+	android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"
+	android:gravity="center_vertical" android:paddingLeft="6dip"
+	android:paddingTop="1dip" android:paddingBottom="1dip" />
