crash, no idea why

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -17,10 +17,24 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res/de.ub0r.android.travelLog"
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 	<LinearLayout android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:layout_weight="0">
+		<!-- Place an AdMob ad at the bottom of the screen. -->
+		<!-- It has white text on a black background. -->
+		<!-- The description of the surrounding context is 'Android game'. -->
+		<com.admob.android.ads.AdView android:id="@+id/ad"
+			android:visibility="gone" android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_alignParentBottom="true"
+			app:keywords="android mobile handy cellphone google htc market app report business travel trip" />
+	
+		<!--
+			We could append app:testing="true" above to always get the test ad
+			back
+		-->
 		<Button android:text="@string/start_work" android:id="@+id/start_work_"
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
 			android:layout_weight="1" />
