--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -20,6 +20,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:title="@string/settings" android:id="@+id/item_settings"
 		android:icon="@android:drawable/ic_menu_preferences" />
+	<item android:title="@string/export_" android:id="@+id/item_export"
+		android:icon="@android:drawable/ic_menu_upload" />
 	<item android:id="@+id/item_about" android:icon="@android:drawable/ic_menu_info_details"
 		android:title="@string/about_" />
 	<item android:id="@+id/item_donate" android:icon="@drawable/ic_menu_donate"
