--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -50,13 +50,6 @@
 	</LinearLayout>
 	<ListView android:id="@+id/log" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:layout_weight="1" />
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
-		<Button android:text="@string/add_row" android:id="@+id/add_row_"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:layout_weight="1" />
-		<Button android:text="@string/clear_" android:id="@+id/clear_"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:layout_weight="1" />
-	</LinearLayout>
+	<Button android:text="@string/add_row" android:id="@+id/add_row_"
+		android:layout_width="wrap_content" android:layout_height="wrap_content" />
 </LinearLayout>
