--- a/res/values/format.xml
+++ b/res/values/format.xml
@@ -3,11 +3,10 @@
 		Copyright (C) 2009 Felix Bechstein
 	-->
 	<!--
-		This file is part of Call Meter NG. This program is free software; you
-		can redistribute it and/or modify it under the terms of the GNU
-		General Public License as published by the Free Software Foundation;
-		either version 3 of the License, or (at your option) any later
-		version.
+		This file is part of TravelLog. This program is free software; you can
+		redistribute it and/or modify it under the terms of the GNU General
+		Public License as published by the Free Software Foundation; either
+		version 3 of the License, or (at your option) any later version.
 	-->
 	<!--
 		This program is distributed in the hope that it will be useful, but
@@ -18,8 +17,6 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <resources>
-	<string-array name="updates">
-		<item>v0.2: add locale for en, en_US</item>
-		<item>v0.1: Initial release</item>
-	</string-array>
+	<string name="format_date">dd.MM.</string>
+	<string name="format_time">kk:mm</string>
 </resources>
