--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -18,6 +18,6 @@
 	-->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@android:id/text1" android:layout_width="fill_parent"
-	android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"
-	android:gravity="center_vertical" android:paddingLeft="6dip"
-	android:paddingTop="1dip" android:paddingBottom="1dip" />
+	android:layout_height="wrap_content" android:gravity="center_vertical"
+	android:paddingLeft="6dip" android:paddingTop="1dip"
+	android:paddingBottom="1dip" />
