--- a/res/values/update.xml
+++ b/res/values/update.xml
@@ -19,7 +19,7 @@
 	-->
 <resources>
 	<string-array name="updates">
-		<item>v0.2: add locale for en, en_US</item>
+		<item>v0.2: add locale for en, en_US, calc time for each line</item>
 		<item>v0.1: Initial release</item>
 	</string-array>
 </resources>
