--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -18,8 +18,12 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <resources>
-	<string-array name="updates">
-		<item>v0.2: add locale for en, en_US, calc time for each line, round time</item>
-		<item>v0.1: Initial release</item>
+	<string-array name="round_">
+		<item>nicht runden</item>
+		<item>5min</item>
+		<item>10min</item>
+		<item>15min</item>
+		<item>30min</item>
+		<item>60min</item>
 	</string-array>
 </resources>
