--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -18,8 +18,20 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <resources>
-	<string-array name="updates">
-		<item>v0.2: add locale for en, en_US, calc time for each line, round time</item>
-		<item>v0.1: Initial release</item>
+	<string-array name="round">
+		<item>0</item>
+		<item>5</item>
+		<item>10</item>
+		<item>15</item>
+		<item>30</item>
+		<item>60</item>
+	</string-array>
+	<string-array name="round_">
+		<item>as is</item>
+		<item>5min</item>
+		<item>10min</item>
+		<item>15min</item>
+		<item>30min</item>
+		<item>60min</item>
 	</string-array>
 </resources>
