--- a/res/layout/list_item_medium.xml
+++ b/res/layout/list_item_medium.xml
@@ -20,4 +20,5 @@
 	android:id="@android:id/text1" android:layout_width="fill_parent"
 	android:layout_height="wrap_content" android:gravity="center_vertical"
 	android:paddingLeft="6dip" android:paddingTop="1dip"
+	android:textAppearance="?android:attr/textAppearanceMedium"
 	android:paddingBottom="1dip" />
