--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -19,9 +19,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res/de.ub0r.android.travelLog"
 	android:orientation="vertical" android:layout_width="fill_parent"
+	android:background="?android:attr/colorBackground"
 	android:layout_height="fill_parent">
 	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="0">
+		android:layout_height="wrap_content" android:layout_weight="0"
+		android:paddingTop="2dip">
 		<Button android:text="" android:id="@+id/stop"
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
 			android:layout_weight="1" />
