--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -17,6 +17,14 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+	<PreferenceCategory android:title="@string/appearance_">
+		<ListPreference android:title="@string/theme_"
+			android:key="theme" android:entries="@array/themes"
+			android:entryValues="@array/themes_values" />
+		<ListPreference android:title="@string/textsize_"
+			android:key="textsize" android:entries="@array/textsize"
+			android:entryValues="@array/textsize_values" />
+	</PreferenceCategory>
 	<PreferenceCategory android:title="@string/settings">
 		<EditTextPreference android:key="mail"
 			android:title="@string/mail_" android:dialogTitle="@string/mail_"
@@ -24,7 +32,7 @@
 		<ListPreference android:key="round" android:title="@string/round_"
 			android:entries="@array/round_" android:entryValues="@array/round"
 			android:dialogTitle="@string/round_" />
+		<CheckBoxPreference android:key="export_flip"
+			android:title="@string/export_flip" />
 	</PreferenceCategory>
-	<CheckBoxPreference android:key="export_flip"
-		android:title="@string/export_flip" />
 </PreferenceScreen>
