--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -35,4 +35,14 @@
 		<CheckBoxPreference android:key="export_flip"
 			android:title="@string/export_flip" />
 	</PreferenceCategory>
+	<PreferenceScreen android:title="@string/feedback_"
+		android:summary="@string/feedback_hint">
+		<intent android:action="android.intent.action.VIEW"
+			android:data="http://code.google.com/p/travellogdroid/issues/list" />
+	</PreferenceScreen>
+	<PreferenceScreen android:title="@string/twitter_"
+		android:summary="@string/twitter_hint">
+		<intent android:action="android.intent.action.VIEW"
+			android:data="http://twitter.com/flx_b" />
+	</PreferenceScreen>
 </PreferenceScreen>
