--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -3,11 +3,10 @@
 		Copyright (C) 2010 Felix Bechstein
 	-->
 	<!--
-		This file is part of TravelLog. This program is free software; you
-		can redistribute it and/or modify it under the terms of the GNU
-		General Public License as published by the Free Software Foundation;
-		either version 3 of the License, or (at your option) any later
-		version.
+		This file is part of TravelLog. This program is free software; you can
+		redistribute it and/or modify it under the terms of the GNU General
+		Public License as published by the Free Software Foundation; either
+		version 3 of the License, or (at your option) any later version.
 	-->
 	<!--
 		This program is distributed in the hope that it will be useful, but
@@ -24,10 +23,6 @@
 		android:icon="@android:drawable/ic_menu_upload" />
 	<item android:title="@string/clear_" android:id="@+id/item_clear"
 		android:icon="@android:drawable/ic_menu_delete" />
-	<item android:id="@+id/item_about" android:icon="@android:drawable/ic_menu_info_details"
-		android:title="@string/about_" />
 	<item android:id="@+id/item_donate" android:icon="@drawable/ic_menu_star"
 		android:title="@string/donate_remove_ads_" />
-	<item android:id="@+id/item_more" android:icon="@drawable/ic_menu_windows"
-		android:title="@string/more_" />
 </menu>
