--- a/res/values/update.xml
+++ b/res/values/update.xml
@@ -19,6 +19,7 @@
 	-->
 <resources>
 	<string-array name="updates">
+		<item>v0.5.3: minor internal changes</item>
 		<item>v0.5.2: minor internal changes</item>
 		<item>v0.5.1: some more internal changes</item>
 		<item>v0.5: minor internal changes</item>
