--- a/res/layout/logs.xml
+++ b/res/layout/logs.xml
@@ -22,7 +22,7 @@
 	android:layout_height="fill_parent">
 	<LinearLayout android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:layout_weight="0"
-		android:paddingTop="2dip">
+		style="@android:style/ButtonBar">
 		<Button android:text="" android:id="@+id/stop"
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
 			android:layout_weight="1" />
@@ -36,11 +36,9 @@
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
 			android:layout_weight="1" />
 	</LinearLayout>
-	<ListView android:id="@+id/log" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="1">
-	</ListView>
-	<Button android:text="@string/add_row" android:id="@+id/add_row_"
-		android:layout_width="fill_parent" android:layout_height="wrap_content" />
+	<ExpandableListView android:id="@android:id/list"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:layout_weight="1" />
 	<LinearLayout android:id="@+id/ad"
 		android:layout_alignParentBottom="true" android:visibility="gone"
 		android:layout_width="fill_parent" android:layout_height="wrap_content"
