--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -41,12 +41,12 @@
 			android:summary="@string/about_hint">
 			<intent android:action="android.intent.action.MAIN"
 				android:targetPackage="de.ub0r.android.travelLog"
-				android:targetClass="de.ub0r.android.travelLog.About" />
+				android:targetClass="de.ub0r.android.travelLog.ui.About" />
 		</PreferenceScreen>
 		<PreferenceScreen android:title="@string/feedback_"
 			android:summary="@string/feedback_hint">
 			<intent android:action="android.intent.action.VIEW"
-				android:data="http://code.google.com/p/travellogdroid/issues/list" />
+				android:data="http://code.google.com/p/ub0rapps/issues/list" />
 		</PreferenceScreen>
 		<PreferenceScreen android:title="@string/twitter_"
 			android:summary="@string/twitter_hint">
