--- a/res/layout/logs_group.xml
+++ b/res/layout/logs_group.xml
@@ -30,13 +30,13 @@
 	<LinearLayout android:layout_width="match_parent"
 		android:layout_height="wrap_content" android:layout_below="@id/date"
 		android:paddingTop="2dip">
-		<TextView android:id="@+id/work" android:layout_width="match_parent"
+		<TextView android:id="@+id/work" android:layout_width="fill_parent"
 			android:layout_height="wrap_content" android:layout_weight="1"
 			android:text="@string/work" />
-		<TextView android:id="@+id/travel" android:layout_width="match_parent"
+		<TextView android:id="@+id/travel" android:layout_width="fill_parent"
 			android:layout_height="wrap_content" android:layout_weight="1"
 			android:text="@string/travel" android:gravity="center_horizontal" />
-		<TextView android:id="@+id/pause" android:layout_width="match_parent"
+		<TextView android:id="@+id/pause" android:layout_width="fill_parent"
 			android:layout_height="wrap_content" android:layout_weight="1"
 			android:text="@string/pause" android:gravity="right" />
 	</LinearLayout>
