--- a/res/layout/list_ok_add.xml
+++ b/res/layout/list_ok_add.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 	<!--
-		Copyright (C) 2009-2010 Felix Bechstein
+		Copyright (C) 2009-2011 Felix Bechstein
 	-->
 	<!--
-		This file is part of Call Meter 3G. This program is free software; you
+		This file is part of TravelLog. This program is free software; you
 		can redistribute it and/or modify it under the terms of the GNU
 		General Public License as published by the Free Software Foundation;
 		either version 3 of the License, or (at your option) any later
@@ -18,7 +18,6 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res/de.ub0r.android.callmeter"
 	android:layout_height="fill_parent" android:layout_width="fill_parent">
 
 	<LinearLayout android:id="@+id/ok_add"
