--- a/res/values/base.xml
+++ b/res/values/base.xml
@@ -29,4 +29,13 @@
 		<item>black</item>
 		<item>light</item>
 	</string-array>
+	<string-array name="update_interval_values">
+		<item>0</item>
+		<item>5</item>
+		<item>10</item>
+		<item>15</item>
+		<item>30</item>
+		<item>60</item>
+		<item>120</item>
+	</string-array>
 </resources>
