--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -44,6 +44,10 @@
 				android:targetPackage="de.ub0r.android.travelLog"
 				android:targetClass="de.ub0r.android.travelLog.ui.LogTypes" />
 		</PreferenceScreen>
+		<ListPreference android:key="update_interval"
+			android:title="@string/update_interval_" android:summary="@string/update_interval_hint"
+			android:entries="@array/update_interval" android:entryValues="@array/update_interval_values"
+			android:defaultValue="60" />
 		<PreferenceScreen android:title="@string/map_">
 			<intent android:action="android.intent.action.MAIN"
 				android:targetPackage="de.ub0r.android.travelLog"
