--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -3,11 +3,10 @@
 		Copyright (C) 2010-2011 Felix Bechstein
 	-->
 	<!--
-		This file is part of TravelLog. This program is free software; you
-		can redistribute it and/or modify it under the terms of the GNU
-		General Public License as published by the Free Software Foundation;
-		either version 3 of the License, or (at your option) any later
-		version.
+		This file is part of TravelLog. This program is free software; you can
+		redistribute it and/or modify it under the terms of the GNU General
+		Public License as published by the Free Software Foundation; either
+		version 3 of the License, or (at your option) any later version.
 	-->
 	<!--
 		This program is distributed in the hope that it will be useful, but
@@ -18,11 +17,12 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent">
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:background="?android:attr/colorBackground">
 	<LinearLayout android:orientation="vertical"
 		android:layout_width="fill_parent" android:layout_height="wrap_content">
 
-		<TextView android:text="@string/about" android:layout_width="wrap_content"
+		<TextView android:text="@string/market_about" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:paddingLeft="5dip"
 			android:paddingRight="5dip" android:autoLink="web" />
 
