--- a/res/values/market.xml
+++ b/res/values/market.xml
@@ -21,5 +21,5 @@
 	<string name="market_about">TravelLog is a one-click-app to log your business trips for later accounting (time recording).\n\nLocation based logging turns it into a zero-click-app!</string>
 	<string name="market_oss">This app is open source software build in spare time. Adding bad comments in market won\'t help much to make it better.\nPlease add your issues with this app on the app\'s website.</string>
 	<string name="market_translation">Feel free to help translating this app to your language here: http://ub0r.de/translate/travellog/</string>
-	<string name="market_keywords">Keywords: travel trip business accounting time recording location map</string>
+	<string name="market_keywords">Keywords: travel trip business timesheet accounting time recording location map</string>
 </resources>
