--- a/res/values/base.xml
+++ b/res/values/base.xml
@@ -17,7 +17,7 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <resources>
-	<string name="app_version">2.0beta2</string>
+	<string name="app_version">2.0</string>
 	<string name="app_name">TravelLog</string>
 	<string name="lang">en</string>
 	<string name="author">Felix Bechstein &lt;f@ub0r.de&gt;</string>
