--- a/res/values/update.xml
+++ b/res/values/update.xml
@@ -19,6 +19,7 @@
 	-->
 <resources>
 	<string-array name="updates">
+		<item>v2.0: minor changes</item>
 		<item>v2.0beta2: location based logging</item>
 		<item>v2.0beta1: major reimplement, move all data to database</item>
 		<item>v0.5.3: minor internal changes</item>
