--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -55,6 +55,42 @@
 		</PreferenceScreen>
 	</PreferenceCategory>
 
+	<PreferenceCategory android:title="@string/go_home_">
+		<PreferenceScreen android:title="@string/go_home_"
+			android:summary="@string/go_home_hint" android:key="go_home">
+			<CheckBoxPreference android:key="count_travel"
+				android:title="@string/count_travel_" android:summary="@string/count_travel_hint" />
+			<PreferenceScreen android:title="@string/limit_warn_">
+				<EditTextPreference android:key="limit_warn"
+					android:title="@string/limit_warn_" android:summary="@string/limit_hint"
+					android:inputType="numberDecimal" />
+				<RingtonePreference android:key="limit_sound_warn"
+					android:title="@string/limit_sound_" android:summary="@string/limit_sound_hint"
+					android:ringtoneType="notification" android:defaultValue="content://settings/system/notification_sound" />
+				<EditTextPreference android:key="limit_repetitions_warn"
+					android:title="@string/limit_repetitions_" android:summary="@string/limit_repetitions_hint"
+					android:inputType="number" />
+				<EditTextPreference android:key="limit_delay_warn"
+					android:title="@string/limit_delay_" android:summary="@string/limit_delay_hint"
+					android:inputType="number" />
+			</PreferenceScreen>
+			<PreferenceScreen android:title="@string/limit_alert_">
+				<EditTextPreference android:key="limit_alert"
+					android:title="@string/limit_alert_" android:summary="@string/limit_hint"
+					android:inputType="numberDecimal" />
+				<RingtonePreference android:key="limit_sound_alert"
+					android:title="@string/limit_sound_" android:summary="@string/limit_sound_hint"
+					android:ringtoneType="notification" android:defaultValue="content://settings/system/notification_sound" />
+				<EditTextPreference android:key="limit_repetitions_alert"
+					android:title="@string/limit_repetitions_" android:summary="@string/limit_repetitions_hint"
+					android:inputType="number" />
+				<EditTextPreference android:key="limit_delay_alert"
+					android:title="@string/limit_delay_" android:summary="@string/limit_delay_hint"
+					android:inputType="number" />
+			</PreferenceScreen>
+		</PreferenceScreen>
+	</PreferenceCategory>
+
 	<PreferenceCategory android:title="@string/about_">
 		<PreferenceScreen android:title="@string/about_"
 			android:summary="@string/about_hint">
