--- a/res/values/preferences.xml
+++ b/res/values/preferences.xml
@@ -17,6 +17,17 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <resources>
+	<string name="about_">About</string>
+	<string name="about_hint">About this app</string>
+	<string name="faq_">FAQ</string>
+	<string name="faq_hint">Some tips and tricks, how to set up this app.</string>
+	<string name="feedback_">Feedback</string>
+	<string name="feedback_hint">Report bugs, request features ...</string>
+	<string name="more_">More Apps..</string>
+	<string name="settings">Preferences</string>
+	<string name="settings_common">Preferences - Common</string>
+	<string name="settings_connectors">Preferences - Connectors</string>
+	<string name="twitter_hint">Follow me on twitter.\nGet update notifications etc.</string>
 	<string name="author_">Author:</string>
 	<string name="version_">Version:</string>
 	<string name="license_">License:</string>
