--- a/res/values-de/map.xml
+++ b/res/values-de/map.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-       <!--
+<!--
                Copyright (C) 2009-2011 Felix Bechstein
        -->
-       <!--
+<!--
                This file is part of TravelLog. This program is free software; you can
                redistribute it and/or modify it under the terms of the GNU General
                Public License as published by the Free Software Foundation; either
                version 3 of the License, or (at your option) any later version.
        -->
-       <!--
+<!--
                This program is distributed in the hope that it will be useful, but
                WITHOUT ANY WARRANTY; without even the implied warranty of
                MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
@@ -16,7 +16,7 @@
                copy of the GNU General Public License along with this program; If
                not, see <http://www.gnu.org/licenses/>.
        -->
-      <!--
+<!--
                This file is generated automatically by ub0rlib/php.
                Visit http://ub0r.de/translate/travellog/edit.php?lang=de&file=map.xml to edit the file.
        -->
@@ -31,4 +31,6 @@
   <string name="last_seen_" formatted="false" username="flx &lt;f+translator@ub0r.de&gt;" orig="Last seen:">Zuletzt gesehen:</string>
   <string name="first_seen_" formatted="false" username="flx &lt;f+translator@ub0r.de&gt;" orig="First seen:">Zuerst gesehen:</string>
   <string name="delete" formatted="false" username="flx &lt;f+translator@ub0r.de&gt;" orig="Delete">Löschen</string>
+  <string name="edit_" formatted="false" username="Felix Bechstein &lt;f+translator@ub0r.de&gt;" orig="Edit">Bearbeiten</string>
+  <string name="edit_cell_" formatted="false" username="Felix Bechstein &lt;f+translator@ub0r.de&gt;" orig="Edit cell">Zelle bearbeiten</string>
 </resources>
