--- a/res/values-de/preferences.xml
+++ b/res/values-de/preferences.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-       <!--
+<!--
                Copyright (C) 2009-2011 Felix Bechstein
        -->
-       <!--
+<!--
                This file is part of TravelLog. This program is free software; you can
                redistribute it and/or modify it under the terms of the GNU General
                Public License as published by the Free Software Foundation; either
                version 3 of the License, or (at your option) any later version.
        -->
-       <!--
+<!--
                This program is distributed in the hope that it will be useful, but
                WITHOUT ANY WARRANTY; without even the implied warranty of
                MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
@@ -16,9 +16,9 @@
                copy of the GNU General Public License along with this program; If
                not, see <http://www.gnu.org/licenses/>.
        -->
-      <!--
+<!--
                This file is generated automatically by ub0rlib/php.
-               Visit http://ub0r.de/translate/travellog/edit.php?lang=de&file=strings.xml to edit the file.
+               Visit http://ub0r.de/translate/travellog/edit.php?lang=de&file=preferences.xml to edit the file.
        -->
 <resources>
   <string name="faq_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="FAQ">FAQ</string>
@@ -58,4 +58,26 @@
     <item>Eine Stunde</item>
     <item>Zwei Stunden</item>
   </string-array>
+  <string name="about_hint" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="About this app">Über diese App</string>
+  <string name="settings_common" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Preferences - Common">Einstellungen - Allgemein</string>
+  <string name="settings_connectors" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Preferences - Connectors">Einstellungen - Connectors</string>
+  <string name="author_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Author:">Autor:</string>
+  <string name="version_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Version:">Version:</string>
+  <string name="license_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="License:">Lizenz:</string>
+  <string name="license" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="GPLv3 - see http://www.gnu.org/licenses/gpl-3.0.txt">GPLv3 - siehe http://www.gnu.org/licenses/gpl-3.0.txt</string>
+  <string name="source_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Sourcescode:">Quellcode:</string>
+  <string name="website_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Website:">Website:</string>
+  <string name="send_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Send">Senden</string>
+  <string name="go_home_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Go home!">Geh nach Hause!</string>
+  <string name="go_home_hint" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Check working time and notify user at certain limits.">Überprüfe deine Arbeitszeit und benachrichtige den Benutzer.</string>
+  <string name="count_travel_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Count work and travel">Reisezeit als Arbeitszeit zählen</string>
+  <string name="count_travel_hint" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Count work and travel time when checking limits.">Arbeits- und Reisezeit erfassen, wenn das Limit geprüft wird.</string>
+  <string name="limit_warn_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Warning">Warnung</string>
+  <string name="limit_alert_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Alert">Alarm</string>
+  <string name="limit_hint" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Time in hours at which the app should notify">Zeit in Stunden bei der die App die benachrichtigen soll</string>
+  <string name="limit_sound_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Sound">Ton</string>
+  <string name="limit_sound_hint" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Sound to play in warning mode">Ton für die Warnung</string>
+  <string name="limit_delay_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Delay">Pause</string>
+  <string name="limit_delay_hint" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Delay between repetitions in seconds">Pause zwischen zwei Wiederholungen in Sekunden</string>
+  <string name="limit_alert_gt_warn_" formatted="false" username="flx &lt;f+translation@ub0r.de&gt;" orig="Alert hours need to be greater than warning hours!">Alarm Stunden müssen über den Warnungsstunden liegen!</string>
 </resources>
