--- a/res/values/update.xml
+++ b/res/values/update.xml
@@ -19,7 +19,8 @@
 	-->
 <resources>
 	<string-array name="updates">
-		<item>v2.1.1: fix FC</item>
+		<item>v2.1.2: update translations</item>
+		<item>v2.1.0.1: fix FC</item>
 		<item>v2.1: add \'go home\' feature, edit cells, improve location checking</item>
 		<item>v2.0: minor changes</item>
 		<item>v2.0beta2: location based logging</item>
