--- a/res/layout/logs.xml
+++ b/res/layout/logs.xml
@@ -29,9 +29,14 @@
 			android:layout_height="wrap_content" android:padding="10dip"
 			android:layout_gravity="center" android:text="@string/hint" />
 	</FrameLayout>
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="0"
-		style="@android:style/ButtonBar">
+	<LinearLayout android:id="@+id/ad"
+		android:layout_alignParentBottom="true" android:visibility="gone"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:cacheColorHint="?android:attr/colorBackground"
+		android:gravity="right" />
+	<LinearLayout android:id="@+id/buttons"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:layout_weight="0" style="@android:style/ButtonBar">
 		<Button android:id="@+id/stop" android:text="id/stop"
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
 			android:layout_weight="1" />
@@ -45,9 +50,4 @@
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
 			android:layout_weight="1" />
 	</LinearLayout>
-	<LinearLayout android:id="@+id/ad"
-		android:layout_alignParentBottom="true" android:visibility="gone"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:cacheColorHint="?android:attr/colorBackground"
-		android:gravity="center_horizontal" />
 </LinearLayout>
