--- a/res/values/map.xml
+++ b/res/values/map.xml
@@ -18,9 +18,12 @@
 	-->
 <resources>
 	<string name="map_">Map</string>
+	<string name="map_hint">Add cells on the map to add log items automatically.</string>
+	<string name="map_unavail">Coarse location provider is unavailable!</string>
 	<string name="cell_">Cell</string>
 	<string name="add_cell_">Add cell</string>
 	<string name="add_cell_hint">Touch the map to add a cell.</string>
+	<string name="add_cell_toast">Press menu button to add a cell.</string>
 	<string name="type_">Type:</string>
 	<string name="nulltype_">Nothing</string>
 	<string name="radius_">Radius:</string>
