--- a/res/values/update.xml
+++ b/res/values/update.xml
@@ -19,6 +19,7 @@
 	-->
 <resources>
 	<string-array name="updates">
+		<item>HEAD: minor changes and fixes</item>
 		<item>v2.1.2: update translations</item>
 		<item>v2.1.0.1: fix FC</item>
 		<item>v2.1: add \'go home\' feature, edit cells, improve location checking</item>
