--- a/res/values/base.xml
+++ b/res/values/base.xml
@@ -37,4 +37,10 @@
 		<item>60</item>
 		<item>120</item>
 	</string-array>
+	<style name="Theme.SherlockUb0r" parent="style/Theme.Sherlock">
+		<item name="abBackground">#B0353535</item>
+	</style>
+	<style name="Theme.SherlockUb0r_Light" parent="style/Theme.Sherlock.Light">
+		<item name="abBackground">#50353535</item>
+	</style>
 </resources>
