--- a/res/xml/prefs_about.xml
+++ b/res/xml/prefs_about.xml
@@ -17,12 +17,26 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-	<PreferenceCategory android:title="@string/go_home_">
-		<PreferenceScreen android:key="go_home"
-			android:title="@string/go_home_" android:summary="@string/go_home_hint">
+	<PreferenceCategory android:title="@string/about_">
+		<PreferenceScreen android:title="@string/about_"
+			android:summary="@string/about_hint">
 			<intent android:action="android.intent.action.MAIN"
 				android:targetPackage="de.ub0r.android.travelLog"
-				android:targetClass="de.ub0r.android.travelLog.ui.PreferencesGoHome" />
+				android:targetClass="de.ub0r.android.travelLog.ui.About" />
+		</PreferenceScreen>
+		<PreferenceScreen android:title="@string/feedback_"
+			android:summary="@string/feedback_hint">
+			<intent android:action="android.intent.action.VIEW"
+				android:data="http://code.google.com/p/ub0rapps/issues/list" />
+		</PreferenceScreen>
+		<PreferenceScreen android:title="@string/twitter_"
+			android:summary="@string/twitter_hint">
+			<intent android:action="android.intent.action.VIEW"
+				android:data="http://twitter.com/flx_b" />
+		</PreferenceScreen>
+		<PreferenceScreen android:title="@string/more_">
+			<intent android:action="android.intent.action.VIEW"
+				android:data="market://search?q=pub:&quot;Felix Bechstein&quot;" />
 		</PreferenceScreen>
 	</PreferenceCategory>
 </PreferenceScreen>
